--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -195,7 +195,7 @@
         <div class="row justify-content-center" data-aos="zoom-in" data-aos-delay="100">
           <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
             <div class="member">
-              <img src="assets/img/trainers/trainer-1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/trainers/trainer-1.jpeg" class="img-fluid" alt="">
               <div class="member-content">
                 <h4>Ricardo Skewes</h4>
                 <span>Estudiante de física</span>
