--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -48,10 +48,10 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li class="active"><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Catálogo de problemas</a></li>
+          <li><a href="about.html">Catálogo de exámenes</a></li>
           <li><a href="courses.html">Entrenar Teórico</a></li>
           <li><a href="trainers.html">Entrenar Experimental</a></li>
-      
+          <li><a href="trainers.html">Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -197,7 +197,7 @@
             <div class="member">
               <img src="assets/img/trainers/trainer-1.jpeg" class="img-fluid" alt="">
               <div class="member-content">
-                <h4>Ricardo Skewes</h4>
+                <h4>Ricardo Skewes Zorrilla</h4>
                 <span>Estudiante de física</span>
                 <p>
                   Habiendo participado en la Olimpiada de Física, vi la necesidad de crear un sitio web para la Sociedad, que ayudara a dar entrenamiento personalizado para las Olimpiadas.
@@ -215,7 +215,7 @@
             <div class="member">
               <img src="assets/img/trainers/trainer-3.jpg" class="img-fluid" alt="">
               <div class="member-content">
-                <h4>Eduardo Villalpando</h4>
+                <h4>Eduardo Villalpando Mello</h4>
                 <span>Estudiante de Ingeniería</span>
                 <p>
                   Con la experiencia adquirida a través de diferentes proyectos en la intersección de las ciencias y la programación, sé del potencial de la tecnología en la educación. 
