--- a/Mentor/index.html
+++ b/Mentor/index.html
@@ -47,15 +47,15 @@
 
       <nav class="nav-menu d-none d-lg-block">
         <ul>
-          <li class="active"><a href="index.html">Inicio</a></li>
-          <li><a href="about.html">Catálogo de exámenes</a></li>
-          <li><a href="courses.html">Entrenar Teórico</a></li>
-          <li><a href="trainers.html">Entrenar Experimental</a></li>
-          <li><a href="trainers.html">Referencias de interés</a></li>
+          <li><a href="index.html">Inicio</a></li>
+          <li><a href="">Catálogo de exámenes</a></li>
+          <li><a href="">Entrenar Teórico</a></li>
+          <li class="active"><a href="trainers.html">Entrenar Experimental</a></li>
+          <li><a href="">Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="courses.html" class="get-started-btn">Iniciar Sesión</a>
+      <a href="" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
 
