--- a/Mentor/events.html
+++ b/Mentor/events.html
@@ -102,7 +102,7 @@
                 <img src="assets/img/events-1.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Introduction to webdesign</a></h5>
+                <h5 class="card-title">Introduction to webdesign</h5>
                 <p class="font-italic text-center">Sunday, September 26th at 7:00 pm</p>
                 <p class="card-text">Lorem ipsum dolor sit amet, consectetur elit, sed do eiusmod tempor ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
               </div>
@@ -114,7 +114,7 @@
                 <img src="assets/img/events-2.jpg" alt="...">
               </div>
               <div class="card-body">
-                <h5 class="card-title"><a href="">Marketing Strategies</a></h5>
+                <h5 class="card-title">Marketing Strategies</h5>
                 <p class="font-italic text-center">Sunday, November 15th at 7:00 pm</p>
                 <p class="card-text">Sed ut perspiciatis unde omnis iste natus error sit voluptatem doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo</p>
               </div>
