agregar SitioEnConstruccion+ajustes

--- a/experimento1.html
+++ b/experimento1.html
@@ -73,7 +73,7 @@
 
     <!-- ======= Paso 1 Ingresar Valores ======= -->
     <section id="variables" class="events" style="padding-bottom: 0px;">
-      <div class="container" data-aos="fade-up">
+      <div class="container" data-aos="fade-up" style="padding-right: 7%; padding-left: 7%;">
         <div class="row">
           <div class="col-md-6 d-flex align-items-stretch">
             <div class="card">
@@ -84,8 +84,8 @@
                 <p class="font-italic text-center">Variable independiente</p>
                 <h5 class="card-title" id="variable-independiente-nombre">Longitud</h5>
                 <p class="card-text">
+                    <input type="number" id="variable-independiente-valor" placeholder="Ingresa un valor" style="width: 100%; text-align: center; font-size: large;">
                   <h3 style="text-align: center;">
-                    <input type="number" id="variable-independiente-valor" placeholder="Ingresa un valor" style="width: 100%; text-align: center;">
                     <span id="variable-independiente-unidad">m</span>
                   </h3>
                 </p>
@@ -125,7 +125,7 @@
           <p>Aqui van a ir las opciones</p>
 
           <h2 id="respuestas-ecuacion">
-            $$y=$$<input type="number" placeholder="m">$$x +$$ <input type="number" placeholder="b">
+            $$y=$$<input type="number" placeholder="m" style="font-size: x-large; text-align: center;">$$x +$$ <input type="number" placeholder="b" style=" text-align: center; font-size: x-large;">
           </h2>
         <!-- </div> -->
       </div>
