--- a/index.html
+++ b/index.html
@@ -48,14 +48,14 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="">Catálogo de exámenes</a></li>
-          <li><a href="">Entrenar Teórico</a></li>
+          <li><a href="enConstruccion.html" >Catálogo de exámenes</a></li>
+          <li><a href="enConstruccion.html" >Entrenar Teórico</a></li>
           <li class="active"><a href="trainers.html">Entrenar Experimental</a></li>
-          <li><a href="">Referencias de interés</a></li>
+          <li><a href="enConstruccion.html" >Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="" class="get-started-btn">Iniciar Sesión</a>
+      <a href="enConstruccion.html" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
 
@@ -64,8 +64,8 @@
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Entrena para las<br>Olimpiadas de Física</h1>
       <h2>Hemos construido esta herramienta para ti</h2>
-      <a href="courses.html" class="btn-get-started">Registrarse</a>
-      <a href="courses.html" class="btn-get-started">Iniciar Sesión</a>
+      <a href="enConstruccion.html" class="btn-get-started">Registrarse</a>
+      <a href="enConstruccion.html" class="btn-get-started">Iniciar Sesión</a>
     </div>
   </section><!-- End Hero -->
 
