--- a/enConstruccion.html
+++ b/enConstruccion.html
@@ -1,6 +1,6 @@
 
 <!DOCTYPE html>
-<html lang="en" style="height: 100%;>
+<html lang="en" style="height: 100%;">
 <head>
     <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
