--- a/experimento1.html
+++ b/experimento1.html
@@ -51,13 +51,13 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="">Catálogo de exámenes</a></li>
-          <li><a href="">Entrenar Teórico</a></li>
+          <li><a href="enConstruccion.html">Catálogo de exámenes</a></li>
+          <li><a href="enConstruccion.html">Entrenar Teórico</a></li>
           <li class="active"><a href="trainers.html">Entrenar Experimental</a></li>
-          <li><a href="">Referencias de interés</a></li>
+          <li><a href="enConstruccion.html">Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
-      <a href="" class="get-started-btn">Iniciar Sesión</a>
+      <a href="enConstruccion.html" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
   
@@ -110,7 +110,7 @@
             </div>
           </div>
       </div>
-      <a href="" id="siguiente">
+      <a href="enConstruccion.html" id="siguiente">
         <div class="breadcrumbs" style="margin-top: 0;">
           <h2>Siguiente</h2>
         </div>
