--- a/index.html
+++ b/index.html
@@ -143,11 +143,13 @@
             <div class="content">
               <h3>Sociedad Mexicana de Física (SMF)</h3>
               <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Duis aute irure dolor in reprehenderit
-                Asperiores dolores sed et. Tenetur quia eos. Autem tempore quibusdam vel necessitatibus optio ad corporis.
+                Asociación mexicana de físicos y demás colaboradores dedicados 
+                a contribuir a la investigación en distintas áreas de la física. La Sociedad organiza reconocidos eventos a nivel nacional relacionados con esta ciencia, 
+                como las Olimpiadas de Física y los Encuentros de Enseñanza. Asimismo, es responsable de la acreditación y supervisión del aprendizaje y la enseñanza en física a nivel medio superior y superior. 
+                
               </p>
               <div class="text-center">
-                <a href="about.html" class="more-btn">Learn More <i class="bx bx-chevron-right"></i></a>
+                <a href="https://www.smf.mx/" class="more-btn">¿Quieres saber más?<i class="bx bx-chevron-right"></i></a>
               </div>
             </div>
           </div>
@@ -156,23 +158,23 @@
               <div class="row">
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-receipt"></i>
-                    <h4>Corporis voluptates sit</h4>
-                    <p>Consequuntur sunt aut quasi enim aliquam quae harum pariatur laboris nisi ut aliquip</p>
+                    <i class="bx bx-medal"></i>
+                    <h4>Eventos</h4>
+                    <p>La SMF organiza reconocidos eventos, como el Congreso Nacional de Física, la Olimpiada Nacional de Física y los Encuentros Nacionales de Divulgación y Enseñanza</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-cube-alt"></i>
-                    <h4>Ullamco laboris ladore pan</h4>
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt</p>
+                    <i class="bx bx-atom"></i>
+                    <h4>Divisiones Temáticas</h4>
+                    <p>La SMF está compuesta por ocho divisiones temáticas: Física Médica, Fluidos y Plasmas, Gravitación y Física Matemática, División de Óptica, Partículas y Campos, Física Nuclear, Física de Radiaciones y Física Estadística.</p>
                   </div>
                 </div>
                 <div class="col-xl-4 d-flex align-items-stretch">
                   <div class="icon-box mt-4 mt-xl-0">
-                    <i class="bx bx-images"></i>
+                    <i class="bx bx-building"></i>
                     <h4>Labore consequatur</h4>
-                    <p>Aut suscipit aut cum nemo deleniti aut omnis. Doloribus ut maiores omnis facere</p>
+                    <p>Las oficinas principales de la SMF se encuentran en la Facultad de Ciencias de la UNAM</p>
                   </div>
                 </div>
               </div>
