--- a/trainers.html
+++ b/trainers.html
@@ -47,14 +47,14 @@
       <nav class="nav-menu d-none d-lg-block">
         <ul>
           <li><a href="index.html">Inicio</a></li>
-          <li><a href="">Catálogo de exámenes</a></li>
-          <li><a href="">Entrenar Teórico</a></li>
+          <li><a href="enConstruccion.html">Catálogo de exámenes</a></li>
+          <li><a href="enConstruccion.html">Entrenar Teórico</a></li>
           <li class="active"><a href="trainers.html">Entrenar Experimental</a></li>
-          <li><a href="">Referencias de interés</a></li>
+          <li><a href="enConstruccion.html">Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="" class="get-started-btn">Iniciar Sesión</a>
+      <a href="enConstruccion.html" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
   
