--- a/experimento1.html
+++ b/experimento1.html
@@ -186,7 +186,7 @@
   <!-- Phystrainer js -->
   <script src="./assets/js/Phystrainer.js"></script>
   <script>
-    let ecuacion = new PhysTrainerProblem('lineal')
+    const ecuacion = new PhysTrainerProblem("lineal");
     // document.querySelector("#variable-independiente-valor").setAttribute('max', ecuacion.x_max);
     // document.querySelector("#variable-independiente-valor").setAttribute('min', ecuacion.x_min);
 
