--- a/trainers.html
+++ b/trainers.html
@@ -64,7 +64,7 @@
       <div class="container">
         <h2>Entrenamiento para experimentos</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras eget facilisis turpis, tincidunt maximus neque. Fusce in enim tristique, venenatis libero iaculis, blandit nunc. Nam pellentesque libero ut tempor volutpat. Nulla mattis lacus nec diam laoreet mollis vel non augue. Aenean id ante quam. Vestibulum gravida urna lectus, ut porta est tempor vitae. 
+          En esta sección podrás simular un experimento desde la comodidad de tu casa. Este portal te ayudará a entrenar para el componente experimental de la Olimpiada. Si inicias sesión, podrás obtener retroalimentación sobre el tiempo que tardas y tips para mejorar.
         </p>
       </div>
     </div><!-- End Breadcrumbs -->
@@ -73,30 +73,43 @@
       <a href="./experimento1.html" class="btn-get-started">Iniciar Experimento</a>
     </section><!-- End Hero -->
     
-
-
-
-    <!-- ======= About Section ======= -->
-    <section id="about" class="about">
+    <section id="why-us" class="why-us">
       <div class="container" data-aos="fade-up">
 
-        <div class="section-title">
-          <h2>¿Cómo usar esta sección?</h2>
-          <p>¿Cómo usar esta sección?</p>
-        </div>
+   
+          <div class="column-lg-8 d-flex align-items-stretch" data-aos="zoom-in" data-aos-delay="100">
+            <div class="icon-boxes d-flex flex-column justify-content-center">
+              <div class="column">
+                <div class="row-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-test-tube"></i>
+                    <h4>Experimenta</h4>
+                    <p>En la primera pestaña, utiliza el selector para variar la variable independiente y medir la dependiente. Los datos se encuentran dentro de un rango de medición que debes hallar a base de prueba y error.</p>
+                  </div>
+                </div>
+                <div class="row-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-glasses"></i>
+                    <h4>Analiza</h4>
+                    <p>Posteriormente, usando los datos recabados, realiza tablas y gráficas, asegurándote de escribir unidades, variables y tomando en cuenta el número apropiado de cifras significativas. Con todo esto, encuentra a mano la recta o curva de mejor ajuste. </p>
+                  </div>
+                </div>
+                <div class="row-xl-4 d-flex align-items-stretch">
+                  <div class="icon-box mt-4 mt-xl-0">
+                    <i class="bx bx-send"></i>
+                    <h4>Reporta tus resultados</h4>
+                    <p>Ingresa los parámetros que hallaste para la regresión, con el número apropiado de cifras significativas. Asimismo, reporta sus incertidumbres. El sistema informático se encargará de automáticamente calificar el ejercicio y arrojarte un resultado.</p>
+                  </div>
+                </div>
+              </div>
+            </div><!-- End .content-->
+          </div>
 
-        <div class="row">
-          <div class="col-lg-6 order-1 order-lg-2" data-aos="fade-left" data-aos-delay="100">
-            <img src="assets/img/formulas.jpg" class="img-fluid" alt="">
-          </div>
-          <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure inventore tempora impedit, a ut, molestias nostrum veniam expedita aspernatur officia suscipit maxime modi pariatur quod. Odio impedit vero cumque soluta.
-          </div>
-        </div>
 
       </div>
-    </section><!-- End About Section -->
-  </main><!-- End #main -->
+    </section><!-- End Why Us Section -->
+
+
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
