--- a/experimento1.html
+++ b/experimento1.html
@@ -57,7 +57,7 @@
           <li><a href="enConstruccion.html">Referencias de interés</a></li>
         </ul>
       </nav><!-- .nav-menu -->
-      <a href="enConstruccion.html" class="get-started-btn">Iniciar Sesión</a>
+      <a href="login.html" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
   
@@ -184,7 +184,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <!-- Phystrainer js -->
-  <script src="./assets/js/Phystrainer.js"></script>
+  <script src="./assets/js/experimental.js"></script>
   <script>
     let ecuacion = new PhysTrainerProblem()
     //Cambiar imágenes:
