--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         </ul>
       </nav><!-- .nav-menu -->
 
-      <a href="enConstruccion.html" class="get-started-btn">Iniciar Sesión</a>
+      <a href="login.html" class="get-started-btn">Iniciar Sesión</a>
     </div>
   </header><!-- End Header -->
 
@@ -64,8 +64,8 @@
     <div class="container position-relative" data-aos="zoom-in" data-aos-delay="100">
       <h1>Entrena para las<br>Olimpiadas de Física</h1>
       <h2>Hemos construido esta herramienta para ti</h2>
-      <a href="enConstruccion.html" class="btn-get-started">Registrarse</a>
-      <a href="enConstruccion.html" class="btn-get-started">Iniciar Sesión</a>
+      <a href="register.html" class="btn-get-started">Registrarse</a>
+      <a href="login.html" class="btn-get-started">Iniciar Sesión</a>
     </div>
   </section><!-- End Hero -->
 
