Parte 2, el header ya se encoje jeje

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
 
     <!--HEADER-->
-    <nav>
-        <div class="menu">
+    <div class="nav-cont">
+        <nav>
             <a href="./index.html"><img src="/assets/img/logo_gris.png" alt="Logo PhysTrainer"></a>
             <ul>
                 <li><a>Catálogo de problemas</a></li>
@@ -21,7 +21,7 @@
                 <li><a>Entrenar Experimental</a></li>
                 <li><a href="./login.html">Iniciar Sesión</a></li>
             </ul>
-        </div>
+        </nav>
 
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 219.04">
             <path fill="var(--main_color)" 
@@ -29,7 +29,7 @@
                 d="M0,96L48,128C96,160,192,224,288,218.7C384,213,480,139,576,101.3C672,64,768,64,864,90.7C960,117,1056,171,1152,181.3C1248,192,1344,160,1392,144L1440,128L1440,0L1392,0C1344,0,1248,0,1152,0C1056,0,960,0,864,0C768,0,672,0,576,0C480,0,384,0,288,0C192,0,96,0,48,0L0,0Z">
             </path>
         </svg>
-    </nav>
+    </div>
 
     <section class="hero">
         <h1>
