--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li><a>Catálogo de problemas</a></li>
                 <li><a>Entrenar Teórico</a></li>
                 <li><a>Entrenar Experimental</a></li>
-                <li><a href="./login.html">Iniciar Sesión</a></li>
+                <li><a href="./login">Iniciar Sesión</a></li>
             </ul>
         </nav>
 
